# AxumSession

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  axumsession.code-workspace  axumsessions.code-workspace  deny.toml
.github/workflows/: sessions.yml
AxumMySqlSessionPool/: Cargo.toml  LICENSE  README.md
AxumMySqlSessionPool/src/: lib.rs
AxumPostgresSessionPool/: Cargo.toml  README.md
AxumPostgresSessionPool/src/: lib.rs
AxumSqliteSessionPool/: Cargo.toml  LICENSE  README.md
AxumSqliteSessionPool/src/: lib.rs
databases/mongo/: Cargo.toml  README.md  cargo.toml
databases/mongo/src/: lib.rs
databases/redis-bb8-pool/: Cargo.toml  README.md
databases/redis-bb8-pool/src/: lib.rs  redis_bb8_pool.rs  redis_bb8_tools.rs
databases/redispool/: Cargo.toml  README.md  cargo.toml
databases/redispool/src/: lib.rs  redis_cluster_pool.rs  redis_pool.rs  redis_tools.rs
databases/sqlx/: CHANGELOG.md  Cargo.toml  README.md  cargo.toml
databases/sqlx/src/: lib.rs  mysql.rs  postgres.rs  sqlite.rs
databases/surreal/: Cargo.toml  README.md  cargo.toml
databases/surreal/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
examples/: any.rs  enable_signed_cookies_headers.rs  middleware_layer.rs  postgres.rs  redis.rs  session_mode.rs  session_null_pool.rs  sqlite.rs  surrealdb.rs
examples/any/: Cargo.toml
examples/any/src/: main.rs
examples/enable_signed_cookies_headers/: Cargo.toml
examples/enable_signed_cookies_headers/src/: main.rs
examples/middleware_layer/: Cargo.toml
examples/middleware_layer/src/: main.rs
examples/postgres/: Cargo.toml
examples/postgres/src/: main.rs
examples/redis/: Cargo.toml
examples/redis/src/: main.rs
examples/rest_test/: Cargo.toml
examples/rest_test/src/: main.rs
examples/session_mode/: Cargo.toml
examples/session_mode/src/: main.rs
examples/session_null_pool/: Cargo.toml
examples/session_null_pool/src/: main.rs
examples/sqlite/: Cargo.toml
examples/sqlite/src/: main.rs
examples/surrealdb/: Cargo.toml
examples/surrealdb/src/: main.rs
src/: config.rs  databases.rs  errors.rs  future.rs  handler.rs  headers.rs  key.rs  layer.rs  lib.rs  manager.rs  sec.rs  service.rs  session.rs  session_data.rs  session_id.rs  session_store.rs  session_timers.rs
src/databases/: any.rs  any_db.rs  database.rs  databases.rs  mod.rs  mongodb.rs  mysql.rs  null.rs  postgres.rs  redis_cluster_pool.rs  redis_pool.rs  redis_tools.rs  sqlite.rs  surreal.rs  surrealdb.rs
src/sec/: encrypt.rs  signed.rs
