[workspace]
resolver = "2"
members = [
    ".",
    "databases/sqlx",
    "databases/mongo",
    "databases/redispool",
    "databases/surreal",
    "examples/any",
    "examples/postgres",
    "examples/sqlite",
    "examples/redis",
    "examples/surrealdb",
    "examples/middleware_layer",
    "examples/rest_test",
    "examples/enable_signed_cookies_headers",
    "examples/session_mode",
    "examples/session_null_pool",
]

[package]
name = "axum_session"
version = "0.13.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "📝 Session management layer for axum that supports HTTP and Rest."
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/axum_session"
keywords = ["Axum", "Tower", "Session", "Store"]
repository = "https://github.com/AscendingCreations/AxumSession"

[features]
key-store = ["fastbloom-rs"]
rest_mode = []
advanced = []

[dependencies]
axum = { version = "0.7.4" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", default-features = false, features = [
    "clock",
    "serde",
] }
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.74"
tracing = "0.1.40"
thiserror = "1.0.50"
http-body = "1.0.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
http = "1.1.0"
tower-layer = "0.3.2"
tower-service = "0.3.2"
cookie = { version = "0.18.0", features = ["percent-encode", "private"] }
futures = "0.3.30"
bytes = "1.5.0"
dashmap = "5.5.3"
aes-gcm = { version = "0.10.3" }
base64 = { version = "0.21.7" }
rand = { version = "0.8.5" }
hmac = "0.12.1"
sha2 = "0.10.8"
forwarded-header-value = "0.1.1"
fastbloom-rs = { version = "0.5.9", optional = true }

[workspace.dependencies]
axum_session = {version = "0.13.0", path = "./"}
chrono = { version = "0.4.31", default-features = false, features = [
    "clock",
    "serde",
] }
async-trait = "0.1.74"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
axum = { version = "0.7.4" }

[package.metadata.docs.rs]
features = [
    "key-store",
    "advanced",
]
rustdoc-args = ["--document-private-items"]
