[workspace]
resolver = "2"
members = [
    ".",
    "databases/sqlx",
    "databases/mongo",
    "databases/redispool",
    "databases/surreal",
    "databases/redis-bb8-pool",
]

[package]
name = "axum_session"
version = "0.14.2"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "📝 Session management layer for axum that supports HTTP and Rest."
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/axum_session"
keywords = ["Axum", "Tower", "Session", "Store"]
repository = "https://github.com/AscendingCreations/AxumSession"

[features]
key-store = ["fastbloom-rs"]
rest_mode = []
advanced = []

[dependencies]
axum = { version = "0.7.7" }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.128"
chrono = { version = "0.4.38", default-features = false, features = [
    "clock",
    "serde",
] }
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.83"
tracing = "0.1.40"
thiserror = "1.0.64"
http-body = "1.0.1"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
http = "1.1.0"
tower-layer = "0.3.3"
tower-service = "0.3.3"
cookie = { version = "0.18.1", features = ["percent-encode", "private"] }
futures = "0.3.31"
bytes = "1.7.2"
dashmap = "6.1.0"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.8.5"
hmac = "0.12.1"
sha2 = "0.10.8"
forwarded-header-value = "0.1.1"
fastbloom-rs = { version = "0.5.9", optional = true }

[workspace.dependencies]
axum_session = { version = "0.14.0", path = "./" }
chrono = { version = "0.4.38", default-features = false, features = [
    "clock",
    "serde",
] }
async-trait = "0.1.81"
tokio = { version = "1.39.3", features = ["full", "tracing"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
axum = "0.7.5"

[package.metadata.docs.rs]
features = ["key-store", "advanced"]
rustdoc-args = ["--document-private-items", "--cfg", "docsrs"]

[dev-dependencies]
sqlx = { version = "0.8.2", features = [
    "macros",
    "sqlite",
    "postgres",
    "_unstable-all-types",
    "tls-rustls",
    "runtime-tokio",
] }
surrealdb = { version = "2.0.0", features = ["kv-mem"] }
hyper = "1.0.1"
redis_pool = "0.6.0"
redis = { version = "0.27.2" }
tower = "0.4.13"
http-body-util = "0.1.0"
axum_session_sqlx = { path = "./databases/sqlx", features = ["sqlite"] }
axum_session_surreal = { path = "./databases/surreal" }
axum_session_redispool = { path = "./databases/redispool" }
axum_session.workspace = true
chrono.workspace = true
async-trait.workspace = true

[[example]]
name = "any"

[[example]]
name = "postgres"

[[example]]
name = "sqlite"

[[example]]
name = "redis"

[[example]]
name = "surrealdb"

[[example]]
name = "middleware_layer"

[[example]]
name = "rest_test"
required-features = ["rest_mode"]

[[example]]
name = "enable_signed_cookies_headers"

[[example]]
name = "session_mode"

[[example]]
name = "session_null_pool"
