[workspace]
resolver = "2"
members = [
    ".",
    "databases/sqlx",
    "databases/mongo",
    "databases/redispool",
    "databases/surreal",
    "databases/redis-bb8-pool",
]

[package]
name = "axum_session"
version = "0.18.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "📝 Session management layer for axum that supports HTTP and Rest."
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/axum_session"
keywords = ["Axum", "Tower", "Session", "Store"]
repository = "https://github.com/AscendingCreations/AxumSession"
rust-version = "1.78"

[features]
key-store = ["fastbloom-rs"]
rest_mode = []
advanced = []

[dependencies]
axum = { version = "0.8.8" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", default-features = false, features = [
    "clock",
    "serde",
] }
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.89"
tracing = "0.1.44"
thiserror = "2.0.18"
http-body = "1.0.1"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
http = "1.4.0"
tower-layer = "0.3.3"
tower-service = "0.3.3"
cookie = { version = "0.18.1", features = ["percent-encode", "private"] }
futures = "0.3.31"
bytes = "1.11.1"
dashmap = "6.1.0"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.9.2"
hmac = "0.12.1"
sha2 = "0.10.9"
forwarded-header-value = "0.1.1"
fastbloom-rs = { version = "0.5.10", optional = true }

[workspace.dependencies]
axum_session = { version = "0.18.0", path = "./" }
chrono = { version = "0.4.42", default-features = false, features = [
    "clock",
    "serde",
] }
async-trait = "0.1.89"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
axum = "0.8.8"

[package.metadata.docs.rs]
features = ["key-store", "advanced"]
rustdoc-args = ["--document-private-items", "--cfg", "docsrs"]

[dev-dependencies]
sqlx = { version = "0.8.6", features = [
    "macros",
    "sqlite",
    "postgres",
    "_unstable-all-types",
    "tls-rustls",
    "runtime-tokio",
] }
surrealdb = { version = "2.6.0", features = ["kv-mem"] }
hyper = "1.8.1"
redis = { version = "1.0.3" }
tower = "0.5.3"
http-body-util = "0.1.3"
axum_session_sqlx = { path = "./databases/sqlx", features = ["sqlite"] }
axum_session_surreal = { path = "./databases/surreal" }
axum_session_redispool = { path = "./databases/redispool" }
axum_session.workspace = true
chrono.workspace = true
async-trait.workspace = true

[dev-dependencies.redis_pool]
#git = "https://github.com/AscendingCreations/RedisPool"
#rev = "f2324c1"
#path = "../redispool/"
version = "0.10.0"

[[example]]
name = "any"

[[example]]
name = "postgres"

[[example]]
name = "sqlite"

[[example]]
name = "redis"

[[example]]
name = "surrealdb"

[[example]]
name = "middleware_layer"

[[example]]
name = "rest_test"
required-features = ["rest_mode"]

[[example]]
name = "enable_signed_cookies_headers"

[[example]]
name = "session_mode"

[[example]]
name = "session_null_pool"
