[package]
name = "axum_sqlite_sessions_pool"
version = "0.1.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "Library to Provide a Sqlx Sqlite Database Pool within a single name for AxumDatabaseSession."
edition = "2021"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/axum_sqlite_sessions_pool"
keywords = ["Axum", "Tower", "SQLx", "Session", "AxumDatabaseSession"]
repository = "https://github.com/AscendingCreations/AxumSessions"

[dependencies]
sqlx = { version = "0.5", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "chrono",
    "json",
    "all-types",
] }
