[package]
name = "example"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[dependencies]
axum = {version = "0.6.1"}
tokio = { version = "1.21.2", features = ["full", "tracing"] }
async-trait = "0.1.58"
sqlx = { version = "0.6.2", features = [
    "macros",
    "offline",
    "migrate",
    "mssql",
    "postgres",
    "sqlite",
    "all-types",
    "runtime-tokio-rustls",
] }

[dependencies.axum_database_sessions]
path = "../"
features = ["sqlite-rustls"]