[package]
name = "axum_session_mongo"
version = "0.6.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "📝 Mongo Database layer for axum_session."
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/axum_session_mongo"
keywords = ["Axum", "Tower", "Mongo", "Session"]
repository = "https://github.com/AscendingCreations/AxumSession"
rust-version = "1.78"

[dependencies]
axum_session.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
async-trait.workspace = true
mongodb = { version = "3.5.1"}
