[package]
name = "axum_session_sqlx"
version = "0.2.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "📝 Sqlx Persistent Database layer for axum_session"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/axum_session_sqlx"
keywords = ["Axum", "Tower", "SQLx", "Session"]
repository = "https://github.com/AscendingCreations/AxumSession"

[features]
default = ["postgres", "tls-rustls"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
tls-rustls = ["sqlx/tls-rustls"]
tls-native-tls = ["sqlx/tls-native-tls"]

[dependencies]
chrono.workspace = true
async-trait.workspace = true
sqlx = { version = "0.8.0", default-features = false, features = [
    "runtime-tokio",
    "chrono",
    "uuid",
]}
axum_session.workspace = true

[dev-dependencies]
axum = { version = "0.7.4", features = ["macros"] }
hyper = "1.4.1"
tower = "0.4.13"
log = { version = "0.4.20", default-features = false }
http-body-util = "0.1.2"
sqlx = { version = "0.8.0", default-features = false, features = [
    "runtime-tokio",
    "chrono",
    "uuid",
    "postgres",
    "tls-rustls"
]}
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
