[package]
name = "axum_session_surreal"
version = "0.2.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "📝 Surreal Persistent Database layer for axum_session"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/axum_session_surreal"
keywords = ["Axum", "Tower", "Surreal", "Session"]
repository = "https://github.com/AscendingCreations/AxumSession"

[dependencies]
axum_session.workspace = true
chrono.workspace = true
async-trait.workspace = true
surrealdb = { version = "2.1.4"}
