[package]
name = "axum_session_surreal"
version = "0.8.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "📝 Surreal Persistent Database layer for axum_session"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/axum_session_surreal"
keywords = ["Axum", "Tower", "Surreal", "Session"]
repository = "https://github.com/AscendingCreations/AxumSession"
rust-version = "1.78"

[dependencies]
axum_session.workspace = true
chrono.workspace = true
async-trait.workspace = true
serde.workspace = true
surrealdb = { version = "3.0.4" }
surrealdb-types = "3.0.4"
