[package]
name = "any"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
async-trait.workspace = true
sqlx = { version = "0.7.2", features = [
    "macros",
    "sqlite",
    "postgres",
    "_unstable-all-types",
    "tls-rustls",
    "runtime-tokio",
] }
axum_session.workspace = true
axum_session_sqlx = { path = "../../databases/sqlx" }
