[package]
name = "middleware_layer"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[dependencies]
axum = { version = "0.7" }
tokio = { version = "1", features = ["full", "tracing"] }
async-trait = "0.1"
axum_session = { path = "../../", features = ["surreal"] }
surrealdb = { version = "1.0.0", features = ["kv-mem"] }
