[package]
name = "middleware_layer"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
async-trait.workspace = true
surrealdb = { version = "2.0.0", features = ["kv-mem"] }
hyper = "1.0.1"
axum_session.workspace = true
axum_session_surreal = { path = "../../databases/surreal" }
