[package]
name = "example"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[dependencies]
axum = {version = "0.6.12"}
tokio = { version = "1.22.0", features = ["full", "tracing"] }
async-trait = "0.1.58"
sqlx = { version = "=0.7.0", features = [
    "macros",
    "sqlite",
    "_unstable-all-types",
    "tls-rustls",
    "runtime-tokio",
] }
axum_session = { path = "../../", features = [ "postgres-rustls","sqlite-rustls"] }
