[package]
name = "postgres"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[dependencies]
axum = {version = "0.7.1"}
tokio = { version = "1.29.1", features = ["full", "tracing"] }
async-trait = "0.1.71"
sqlx = { version = "0.7.2", features = [
    "macros",
    "postgres",
    "_unstable-all-types",
    "tls-rustls",
    "runtime-tokio",
] }
axum_session = { path = "../../", features = [ "postgres-rustls"] }
