[package]
name = "redis_test"
version = "0.0.1"
authors = ["Hossam Maher<hos.mercury@gmail.com>"]
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
async-trait.workspace = true
redis_pool = "0.3.0"
redis = { version = "0.24.0" }
axum_session.workspace = true
axum_session_redispool = { path = "../../databases/redispool" }