[package]
name = "rest_test"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[dependencies]
axum = { version = "0.7.1" }
tokio = { version = "1.29.1", features = ["full", "tracing"] }
async-trait = "0.1.71"
axum_session = { path = "../../", features = ["surreal", "rest_mode"] }
surrealdb = { version = "1.0.0", features = ["kv-mem"] }
tower = "0.4.13"
hyper = "1.0.1"
http-body-util = "0.1.0"
