[package]
name = "rest_test"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
async-trait.workspace = true
surrealdb = { version = "1.0.0", features = ["kv-mem"] }
tower = "0.4.13"
hyper = "1.0.1"
http-body-util = "0.1.0"
axum_session = { workspace = true, features = ["rest_mode"]  }
axum_session_surreal = { path = "../../databases/surreal" }