[package]
name = "sqlite"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[dependencies]
axum = {version = "0.7"}
tokio = { version = "1.29", features = ["full", "tracing"] }
async-trait = "0.1"
sqlx = { version = "0.7", features = [
    "macros",
    "sqlite",
    "_unstable-all-types",
    "tls-rustls",
    "runtime-tokio",
] }
axum_session = { path = "../../", features = ["sqlite-rustls"] }
