[package]
name = "surreal"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[dependencies]
axum = { version = "0.6.18" }
tokio = { version = "1.29.1", features = ["full", "tracing"] }
async-trait = "0.1.71"
axum_session = { path = "../../", features = ["surreal"] }
surrealdb = { version = "1.0.0", features = ["kv-mem"] }
