[package]
name = "surreal"
version = "0.0.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
async-trait.workspace = true
axum_session.workspace = true
surrealdb = { version = "1.0.0", features = ["kv-mem"] }
axum_session_surreal = { path = "../../databases/surreal" }